Client get and edit own details
